OESE - Navigation menu fixes for mobile screens, some font sizes & alignment fixes

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -286,9 +286,9 @@ ul.tour_dates li {
 .main-menu li.menu-item-has-children > a { margin-right: 8px; }
 .main-menu li.menu-item-has-children > a:after { width: 0; height: 0; border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #ffffff; content: ""; position: absolute; top: 16px; right: 13px; }
 
-.responsiv-menu { display: none; background: #294179; float: left; border-top: 1px solid #00407C; width:100%; }
+.responsiv-menu { display: none; background: #1F5C99; float: left; border-top: 1px solid #2873BF; width:100%; margin-top: 12px;}
 .responsiv-menu li, .responsiv-menu li a { width: 100% }
-.responsiv-menu li { border-bottom: 1px solid #054480; border-top: 1px solid #095AA6;}
+.responsiv-menu li { border-bottom:1px solid #2873BF; border-top: 1px solid #095AA6;}
 .responsiv-menu li:first-child { border-top: none}
 
 .responsiv-menu li.menu-item-has-children { position:relative; }
@@ -361,7 +361,8 @@ ul.tour_dates li {
 .main-menu .sub-menu li a:hover, .main-menu .sub-menu li a:focus { color:#bcbcbc; }
 /* End of Mega Menu */
 
-.navi_icn { color: #fff; width: 100%; padding: 20px 0; display: none !important; background: #294179; cursor: pointer }
+.navi_icn { color: #fff; width: 100%; padding: 20px 0; display: none !important; cursor: pointer }
+.navi_icn .fa-bars,.navi_icn .fa-times{color: #004285;}
 .responsiv-menu li:last-child { border-bottom: none}
 
 .bg_img_of_icns p { font-style: normal; color:#fff; }
@@ -903,7 +904,6 @@ svg {
 
     .right_sid_mtr .col-sm-6 {  width: 46.5%; margin-left: 5%}
     .right_sid_mtr .col-sm-6:first-child { margin-left: 0}
-    body { padding-top: 25px;}
     .lft_sid_mtr { margin-bottom: 15px;}
     .hdr .col-xs-offset-2 { margin-left: 0px !important; }
     .panel-group { width: 100%}
@@ -1222,6 +1222,16 @@ svg {
         font-size: 2rem !important;
         padding: .375rem 1.25rem !important;
     }
+
+    body{
+        font-size: 16px !important;
+    }
+    .footer-title p{
+        font-size: 18px !important;
+    }
+    .navi_icn .fa-bars,.navi_icn .fa-times{font-size: 22px !important;}
+    .navi_icn .fa-times{top: 4px;}
+    .mobile-nav-bar{position: relative;top: -43px;}
 }
 @media (min-width: 481px) and (max-width: 575.98px){
     .topbar-social-icons{width: 26%;}
@@ -1513,7 +1523,7 @@ a{
     background-size: contain;
 }
 .footer-title{
-    margin-bottom: 7px;
+    margin-bottom: 10px;
 }
 .footer-title p{
     color: #fff;
@@ -1530,9 +1540,13 @@ a{
     list-style: none;
     line-height: 34px;
 }
+.footer-sub-menu .sub-menu-links li{
+    line-height: 28px;
+}
 .footer-sub-menu .sub-menu-links li a{
     text-decoration: none;
     color: #fff;
+    font-size: 18px;
 }
 .bottom-footer-section{
     background: #002649;
@@ -1703,7 +1717,7 @@ a{
     color: #4f4f4f;
     margin-bottom: 0 !important;
     line-height: 31px;
-    height: 65px;
+    height: 64px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -1757,3 +1771,27 @@ a{
     text-decoration: none;
     color: #1F5C99 !important;
 }
+
+/*Program Information Block START*/
+.program-block-section{
+    margin-bottom: 50px;
+}
+.program-block-inner-section{
+    padding: 20px 28px 13px 28px;
+    border-radius: 5px;
+}
+.program-block-title{
+    font-family: 'Helvetica Neue', sans-serif !important;
+    font-size: 20px !important;
+    color: #4f4f4f !important;
+    text-transform: uppercase;
+    margin-bottom:0 !important;
+    vertical-align: top;
+}
+.program-block-description{
+    font-family: 'Helvetica Neue', sans-serif !important;
+    font-size: 20px !important;
+    margin-bottom: 0;
+    color: #333 !important;
+}
+/*Program Information Block END*/
